# question-bank

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
.github/: git-commit-instructions.md
alembic/: env.py
alembic/versions/: 3c8a2f2fd3fc_add_column_subtopic_to_question.py  4d6c04488788_init_schema.py
app/: main.py
app/core/: cache.py  config.py  logging_config.py  middleware.py  openapi.py
app/crud/: assessment.py  choice.py  question.py  question_crud.py
app/db/: base_imports.py  engine.py  session.py
app/domain/: content_type.py
app/helpers/: build_paginated.py  content_signer.py  subject_code.py
app/models/: area.py  assessment.py  assessment_type.py  choice.py  choice_content.py  course.py  difficulty.py  exam.py  institution.py  modality.py  period.py  question.py  question_areas.py  question_content.py  question_source.py  question_type.py  solution.py  solution_content.py  source.py  subtopic.py  topic.py  type_exam.py  type_question.py
app/ports/: storage_port.py
app/repositories/: choice_content_repository.py  course_repository.py  institution_repository.py  pagination.py  question_repository.py  source_repository.py  subtopic_repository.py  topic_repository.py
app/routers/: assessment.py  question.py
app/schemas/: assessment.py  choice.py  pagination.py  question.py  response.py  solution.py  statement.py
app/services/: area_service.py  choice_service.py  content_signer.py  course_service.py  image_service.py  institution_service.py  question_content_service.py  question_guard_service.py  (+6 more)
(+45 files in other folders)
