[project]
name = "question-bank"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "black>=26.1.0",
    "fastapi>=0.128.0",
    "google-cloud-storage>=3.8.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.1",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I"]
fix = true
